--- a/Client/client_app/templates/client_app/members.html
+++ b/Client/client_app/templates/client_app/members.html
@@ -11,7 +11,7 @@
 <style>
     /* --- SECTION HEADER / HERO --- */
     .hero-banner-members {
-        background: #9d3ffc; /* Violet vif identique à votre charte */
+        background: #3f72af; /* Violet vif identique à votre charte */
         border-radius: 25px;
         color: white;
         padding: 35px 45px;
