updating the color back for the save button for both files add_book and issue_book

--- a/Client/client_app/templates/client_app/add_book.html
+++ b/Client/client_app/templates/client_app/add_book.html
@@ -128,7 +128,7 @@
 
     /* --- BOUTON NOIR PLEINE LARGEUR --- */
     .btn-save-black {
-        background: #111827;
+        background: #3f72af;
         color: #ffffff !important;
         width: 100%;
         padding: 16px;
@@ -147,7 +147,7 @@
     }
 
     .btn-save-black:hover {
-        background: #1f2937;
+        background: #3f72af;
     }
 </style>
 
