--- a/Client/client_app/templates/client_app/issue_book.html
+++ b/Client/client_app/templates/client_app/issue_book.html
@@ -134,8 +134,8 @@
         color: #ffffff !important;
     }
 
-    .btn-issue { background: #111827; } /* Noir pro pour l'emprunt */
-    .btn-issue:hover { background: #1f2937; transform: translateY(-2px); }
+    .btn-issue { background: #3f72af; } /* Noir pro pour l'emprunt */
+    .btn-issue:hover { background:  #3f72af; transform: translateY(-2px); }
 
     .btn-return { background: #f59e0b; } /* Orange pro pour le retour */
     .btn-return:hover { background: #d97706; transform: translateY(-2px); }
